turtleart.square.Square.scala.error
Compilation error:
Square:2: error: not found: value pendDown
  pendDown();
  ^