turtleart.square.Square.scala.code
override def run() {
  pendDown();
  forward(200.0);
  right(90.0);
  forward(200.0);
  right(90.0);
  forward(200.0);
  right(90.0);
  forward(200.0);
  right(90.0);
}